# assetsafe

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  layout.html  locustfile.py  main.py  pyproject.toml  seed_db.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  general.md
.github/workflows/: ci.yml
apps/asset_management/: admin.py  apps.py  tests.py
apps/asset_management/api/: serializers.py  urls.py  views.py
apps/asset_management/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_asset_enquiry_custody.py  0004_remove_assetregistration_ar_owner_type_idx_and_more.py  0005_managed_lookup_options.py  0005_remove_assetregistration_created_at_and_more.py  (+2 more)
apps/assetsafe/: admin.py
apps/collateral/: admin.py  apps.py  constants.py  tests.py
apps/common/: admin.py  tests_lookup_options.py
apps/enquiries/: admin.py  apps.py  tests.py
apps/hire_purchase/: admin.py  apps.py  tests.py
apps/individuals/: apps.py
apps/users/: admin.py  apps.py
assetsafe/: apps.py
core/: celery.py  settings.py  urls.py
frontend/: .env.example  Dockerfile  README.md  ROUTER_OPTIMIZATION_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
nginx/: default.conf
scripts/: create_github_issues.py
templates/emails/: password_changed.html  password_reset.html  welcome_client.html  welcome_user.html
(+214 files in other folders)
