[project]
name = "assetsafe"
version = "0.1.0"
description = "Keep safe trade safe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "django>=5.2,<5.3",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.4.1",
    "gunicorn>=25.3.0",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pygithub>=2.9.0",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage>=7.0",
    "locust>=2.43.4",
    "ruff>=0.15.7",
]
